--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>Converter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jwebmp.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>0.66.0.1</version>
+        </dependency>
 
     </dependencies>
 
